Fixed up padding in the header to avoid headers falling behind the fork button

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -120,6 +120,7 @@ a {
   > article {
     > header {
       border-bottom: 1px solid #ccc;
+      padding-right: 65px;
 
       h1 {
         font-size: 2em;
